--- a/proyecto_adopciones/Aplicaciones/adopciones/templates/persona.html
+++ b/proyecto_adopciones/Aplicaciones/adopciones/templates/persona.html
@@ -45,4 +45,23 @@
     </tbody>
 </table>
 
+<script>
+function confirmarEliminacion(id) {
+    Swal.fire({
+        title: '¿Estás seguro?',
+        text: "¡No podrás revertir esto!",
+        icon: 'warning',
+        showCancelButton: true,
+        confirmButtonColor: '#3085d6',
+        cancelButtonColor: '#d33',
+        confirmButtonText: 'Sí, eliminar',
+        cancelButtonText: 'Cancelar'
+    }).then((result) => {
+        if (result.isConfirmed) {
+            window.location.href = `/persona/eliminarPersona/${id}/`;
+        }
+    })
+}
+</script>
+
 {% endblock %}
