--- a/proyecto_adopciones/Aplicaciones/adopciones/templates/plantilla.html
+++ b/proyecto_adopciones/Aplicaciones/adopciones/templates/plantilla.html
@@ -94,38 +94,22 @@
               <li class="nav-item">
                 <a data-bs-toggle="collapse" href="#base">
                   <i class="fas fa-layer-group"></i>
-                  <p>OPCIONES</p>
+                  <p>ESCOJA UNA OPCION</p>
                   <span class="caret"></span>
                 </a>
                 <div class="collapse" id="base">
                   <ul class="nav nav-collapse">
                     <li>
                       <a href="/">
-                        <span class="sub-item">LIBROS</span>
+                        <span class="sub-item">MASCOTAS</span>
                       </a>
                     </li>
                     <li>
                       <a href="usuario">
-                        <span class="sub-item">USUARIOS</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="prestamo">
-                        <span class="sub-item">PRESTAMOS</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="pelicula">
-                        <span class="sub-item">PELICULAS</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="genero">
-                        <span class="sub-item">GENEROS</span>
+                        <span class="sub-item">ADOPCIONES</span>
                       </a>
                     </li>
                     
-                   
                   </ul>
                 </div>
               </li>
