--- a/proyecto_adopciones/Aplicaciones/adopciones/templates/plantilla.html
+++ b/proyecto_adopciones/Aplicaciones/adopciones/templates/plantilla.html
@@ -109,6 +109,11 @@
                         <span class="sub-item">ADOPCIONES</span>
                       </a>
                     </li>
+                    <li>
+                      <a href="usuario">
+                        <span class="sub-item">VOLVER A ADOPTANTES</span>
+                      </a>
+                    </li>
                     
                   </ul>
                 </div>
