--- a/proyecto_adopciones/Aplicaciones/adopciones/templates/plantilla.html
+++ b/proyecto_adopciones/Aplicaciones/adopciones/templates/plantilla.html
@@ -110,10 +110,14 @@
                       </a>
                     </li>
                     <li>
-                      <a href="usuario">
-                        <span class="sub-item">VOLVER A ADOPTANTES</span>
+                      <a href="{% url 'persona' %}" 
+                        style="display: block; width: 100%; text-align: center; 
+                                padding: 10px 0; background-color: #dc3545; color: white; 
+                                font-weight: bold; font-size: 16px; text-decoration: none; 
+                                border-radius: 5px;">
+                          VOLVER A ADOPTANTES
                       </a>
-                    </li>
+                  </li>
                     
                   </ul>
                 </div>
