--- a/proyecto_adopciones/Aplicaciones/adopciones/templates/plantilla.html
+++ b/proyecto_adopciones/Aplicaciones/adopciones/templates/plantilla.html
@@ -101,29 +101,20 @@
                   <ul class="nav nav-collapse">
                     <li>
                       <a href="/">
-                        <span class="sub-item">LIBROS</span>
+                        <span class="sub-item">Personas</span>
                       </a>
                     </li>
                     <li>
-                      <a href="usuario">
-                        <span class="sub-item">USUARIOS</span>
+                      <a href="#">
+                        <span class="sub-item">Mascotas</span>
                       </a>
                     </li>
                     <li>
-                      <a href="prestamo">
-                        <span class="sub-item">PRESTAMOS</span>
+                      <a href="/listar-adopciones">
+                        <span class="sub-item">Adopciones</span>
                       </a>
                     </li>
-                    <li>
-                      <a href="pelicula">
-                        <span class="sub-item">PELICULAS</span>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="genero">
-                        <span class="sub-item">GENEROS</span>
-                      </a>
-                    </li>
+                   
                     
                    
                   </ul>
