--- a/proyecto_adopciones/Aplicaciones/adopciones/templates/adopciones/indexAdopciones.html
+++ b/proyecto_adopciones/Aplicaciones/adopciones/templates/adopciones/indexAdopciones.html
@@ -6,7 +6,7 @@
     <!-- Encabezado -->
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h2 class="m-0"><i class="fas fa-users me-2"></i> Adopciones</h2>
-        <a href="#" class="btn btn-primary">
+        <a href="/crear-adopciones" class="btn btn-primary">
             <i class="fas fa-plus me-1"></i> New Adoption
         </a>
     </div>
@@ -58,7 +58,7 @@
 function confirmarEliminacion(id, nombre, urlBase) {
     Swal.fire({
         title: '¿Estás seguro?',
-        html: `Vas a eliminar al Instructor <b>${nombre}</b>. Esta acción no se puede deshacer.`,
+        html: `Vas a eliminar la adopcion de la mascota <b>${nombre}</b>. Esta acción no se puede deshacer.`,
         icon: 'warning',
         showCancelButton: true,
         confirmButtonColor: '#d33',
