--- a/proyecto_adopciones/Aplicaciones/adopciones/templates/plantilla.html
+++ b/proyecto_adopciones/Aplicaciones/adopciones/templates/plantilla.html
@@ -2,8 +2,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
+
   <!-- importando JQUERY -->
-   <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+
   <!-- importando JQUERY VALIDATION-->
   <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.js "></script>
   <!-- importacion validar extensiones de archivos -->
@@ -24,7 +26,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/pdfmake.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js"></script>
 
-  <!--IMPORTACION DE FILEINPUT (falta link rel)-->
+  <!--IMPORTACION DE FILEINPUT -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/5.5.4/js/fileinput.min.js" integrity="sha512-0wQvB58Ha5coWmcgtg4f11CTSSxfrfLClUp9Vy0qhzYzCZDSnoB4Vhu5JXJFs7rU24LE6JsH+6hpP7vQ22lk5w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/5.5.4/css/fileinput.min.css" integrity="sha512-yDVMONIXJPPAoULZ92Ygngsn8ZUGB4ejm6fCc6q9ZvdH8blFAOgg75XZSEaAJ5m4E/yPI1BAi5fF2axMHVuZ5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- FILE INPUT AL ESPANOL -->
@@ -36,6 +38,9 @@
   
   <!-- importando SWEET ALERT -->
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+
+
 
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -262,7 +267,7 @@
                     </div>
                     <span class="profile-username">
                       <span class="op-7">BIENVENIDO,</span>
-                      <span class="fw-bold">ISMAEL</span>
+                      <span class="fw-bold">usuario</span>
                     </span>
                   </a>
                   <ul class="dropdown-menu dropdown-user animated fadeIn">
@@ -343,8 +348,6 @@
   <!-- Chart Circle -->
   <script src="{% static 'plantilla/kaiadmin/assets/js/plugin/chart-circle/circles.min.js' %}"></script>
 
-  <!-- Datatables -->
-  <script src="assets/js/plugin/datatables/datatables.min.js"></script>
 
   <!-- Bootstrap Notify -->
   <script src="assets/js/plugin/bootstrap-notify/bootstrap-notify.min.js"></script>
@@ -353,8 +356,7 @@
   <script src="assets/js/plugin/jsvectormap/jsvectormap.min.js"></script>
   <script src="assets/js/plugin/jsvectormap/world.js"></script>
 
-  <!-- Sweet Alert -->
-  <script src="assets/js/plugin/sweetalert/sweetalert.min.js"></script>
+ 
 
   <!-- Kaiadmin JS -->
   <script src="{% static 'plantilla/kaiadmin/assets/js/kaiadmin.min.js' %}"></script>
