--- a/proyecto_adopciones/Aplicaciones/adopciones/templates/persona.html
+++ b/proyecto_adopciones/Aplicaciones/adopciones/templates/persona.html
@@ -3,10 +3,9 @@
 {% block body %}
 
 <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px;">
-    <h1 style="margin: 0;">LISTA DE PERSONAS ADOPTANTES</h1>
+    <h1 style="margin: 0;">LISTA DE PERSONAS QUE DESEAN ADOPTAR UNA MASCOTA</h1>
     <img src="/media/personas/persona.png" alt="Icono" style="height: 100px; width: 100px; object-fit: contain;">
 </div>
-
 
 <div class="mb-3">
     <a href="{% url 'nuevaPersona' %}" class="btn btn-success">
@@ -14,8 +13,8 @@
     </a>
 </div>
 
-<table class="table table-bordered" id="tbl_personas">
-    <thead>
+<table id="tbl_personas" class="table table-striped table-bordered display nowrap" style="width:100%">
+    <thead class="table-dark">
         <tr>
             <th>ID</th>
             <th>Nombre</th>
@@ -27,38 +26,77 @@
             <th>Acciones</th>
         </tr>
     </thead>
-
     <tbody>
         {% for personaTemporal in personas %}
-            <tr>
-                <td>{{ personaTemporal.id_persona }}</td>   
-                <td>{{ personaTemporal.nombre }}</td>
-                <td>{{ personaTemporal.apellido }}</td>
-                <td>{{ personaTemporal.telefono|default:"-" }}</td>
-                <td>{{ personaTemporal.email|default:"-" }}</td>
-                <td>{{ personaTemporal.direccion|default:"-" }}</td>
-                <td>
-                    <img src="{{ personaTemporal.imagen.url }}" 
-                        alt="Foto" 
-                        width="50" 
-                        height="50" 
-                        style="object-fit: cover; border-radius: 50%;">
-                </td>
-                
-                <td>
-                    <a href="{% url 'editarPersona' personaTemporal.id_persona %}" class="btn btn-primary">
-                        <i class="fa-regular fa-pen-to-square"></i>
-                    </a>
-                    <button type="button" onclick="confirmarEliminacion('{{ personaTemporal.id_persona }}');" class="btn btn-danger">
-                        <i class="fa fa-trash"></i>
-                    </button>
-                </td>
-            </tr>
+        <tr>
+            <td>{{ personaTemporal.id_persona }}</td>
+            <td>{{ personaTemporal.nombre }}</td>
+            <td>{{ personaTemporal.apellido }}</td>
+            <td>{{ personaTemporal.telefono|default:"-" }}</td>
+            <td>{{ personaTemporal.email|default:"-" }}</td>
+            <td>{{ personaTemporal.direccion|default:"-" }}</td>
+            <td>
+                <img src="{{ personaTemporal.imagen.url }}" 
+                    alt="Foto" 
+                    width="50" 
+                    height="50" 
+                    style="object-fit: cover; border-radius: 50%;">
+            </td>
+            <td>
+                <a href="{% url 'editarPersona' personaTemporal.id_persona %}" class="btn btn-primary btn-sm">
+                    <i class="fa-regular fa-pen-to-square"></i>
+                </a>
+                <button type="button" onclick="confirmarEliminacion('{{ personaTemporal.id_persona }}');" class="btn btn-danger btn-sm">
+                    <i class="fa fa-trash"></i>
+                </button>
+            </td>
+        </tr>
         {% endfor %}
     </tbody>
 </table>
 
 <script>
+$(document).ready(function() {
+    $('#tbl_personas').DataTable({
+        dom: 'Bfrtip',
+        buttons: [
+            {
+                extend: 'copy',
+                text: '<i class="fa fa-copy"></i> Copiar',
+                className: 'btn btn-secondary'
+            },
+            {
+                extend: 'excel',
+                text: '<i class="fa fa-file-excel"></i> Excel',
+                className: 'btn btn-success'
+            },
+            {
+                extend: 'pdf',
+                text: '<i class="fa fa-file-pdf"></i> PDF',
+                className: 'btn btn-danger'
+            },
+            {
+                extend: 'print',
+                text: '<i class="fa fa-print"></i> Imprimir',
+                className: 'btn btn-info'
+            },
+            {
+                extend: 'colvis',
+                text: '<i class="fa fa-eye"></i> Columnas',
+                className: 'btn btn-warning'
+            }
+        ],
+        responsive: true,
+        language: {
+            url: "//cdn.datatables.net/plug-ins/1.13.8/i18n/es-ES.json"
+        },
+        pageLength: 5,
+        lengthMenu: [5, 10, 25, 50, 100]
+    });
+});
+</script>
+<script>
+
 function confirmarEliminacion(id) {
     Swal.fire({
         title: '¿Estás seguro?',
@@ -75,7 +113,6 @@ function confirmarEliminacion(id) {
         }
     });
 }
-
 </script>
 
 {% endblock %}
