--- a/proyecto_adopciones/Aplicaciones/adopciones/templates/plantilla.html
+++ b/proyecto_adopciones/Aplicaciones/adopciones/templates/plantilla.html
@@ -3,41 +3,58 @@
 <html lang="en">
   <head>
 
+<!-- ============================= -->
+<!--  LIBRERÍAS PRINCIPALES -->
+<!-- ============================= -->
 
-  <!-- importando JQUERY -->
-   <script src="https://code.jquery.com/jquery-3.7.1.js" ></script>
-  <!-- importando JQUERY VALIDATION-->
-  <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.js "></script>
-  <!-- importacion validar extensiones de archivos -->
-  <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/additional-methods.min.js"></script>
+<!-- jQuery (debe ir siempre primero) -->
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
-  <!--IMPORTACION DE DATATABLES-->
-  <link rel="stylesheet" href="//cdn.datatables.net/2.3.1/css/dataTables.dataTables.min.css">
-  <!--SEGUNDA IMPORTACION DE DATA TABLES -->
-  <script src="//cdn.datatables.net/2.3.1/js/dataTables.min.js"></script>
-  <!-- Botones datatables -->
-  <script src="https://cdn.datatables.net/buttons/2.4.1/js/dataTables.buttons.min.js"></script>
-  <script src="https://cdn.datatables.net/buttons/2.4.1/js/buttons.html5.min.js"></script>
-  <script src="https://cdn.datatables.net/buttons/2.4.1/js/buttons.print.min.js"></script>
-  <script src="https://cdn.datatables.net/buttons/2.4.1/js/buttons.colVis.min.js"></script>
+<!-- Bootstrap JS (requerido por FileInput y algunos plugins) -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Librerías requeridas para exportar datatables -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/pdfmake.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js"></script>
+<!-- ============================= -->
+<!--  VALIDACIÓN DE FORMULARIOS -->
+<!-- ============================= -->
+<script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/additional-methods.min.js"></script>
 
-  <!--IMPORTACION DE FILEINPUT -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/5.5.4/js/fileinput.min.js" integrity="sha512-0wQvB58Ha5coWmcgtg4f11CTSSxfrfLClUp9Vy0qhzYzCZDSnoB4Vhu5JXJFs7rU24LE6JsH+6hpP7vQ22lk5w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/5.5.4/css/fileinput.min.css" integrity="sha512-yDVMONIXJPPAoULZ92Ygngsn8ZUGB4ejm6fCc6q9ZvdH8blFAOgg75XZSEaAJ5m4E/yPI1BAi5fF2axMHVuZ5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <!-- FILE INPUT AL ESPANOL -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap-fileinput@5.5.3/js/locales/es.js"></script>
+<!-- ============================= -->
+<!--  DATATABLES + BUTTONS -->
+<!-- ============================= -->
+<link rel="stylesheet" href="https://cdn.datatables.net/1.13.8/css/jquery.dataTables.min.css">
+<link rel="stylesheet" href="https://cdn.datatables.net/buttons/2.4.2/css/buttons.dataTables.min.css">
 
-  <!-- importando iconos -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />  
-  
-  
-  <!-- importando SWEET ALERT -->
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="https://cdn.datatables.net/1.13.8/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/buttons/2.4.2/js/dataTables.buttons.min.js"></script>
+<script src="https://cdn.datatables.net/buttons/2.4.2/js/buttons.html5.min.js"></script>
+<script src="https://cdn.datatables.net/buttons/2.4.2/js/buttons.print.min.js"></script>
+<script src="https://cdn.datatables.net/buttons/2.4.2/js/buttons.colVis.min.js"></script>
+
+<!-- Exportación (Excel, PDF, etc.) -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/pdfmake.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js"></script>
+
+<!-- ============================= -->
+<!--  FILE INPUT -->
+<!-- ============================= -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/5.5.4/css/fileinput.min.css" integrity="sha512-yDVMONIXJPPAoULZ92Ygngsn8ZUGB4ejm6fCc6q9ZvdH8blFAOgg75XZSEaAJ5m4E/yPI1BAi5fF2axMHVuZ5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-fileinput/5.5.4/js/fileinput.min.js" integrity="sha512-0wQvB58Ha5coWmcgtg4f11CTSSxfrfLClUp9Vy0qhzYzCZDSnoB4Vhu5JXJFs7rU24LE6JsH+6hpP7vQ22lk5w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap-fileinput@5.5.3/js/locales/es.js"></script>
+
+<!-- ============================= -->
+<!--  ICONOS -->
+<!-- ============================= -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+<!-- ============================= -->
+<!-- SWEET ALERT -->
+<!-- ============================= -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+
 
 
 
@@ -49,11 +66,8 @@
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
       name="viewport"
     />
-    <link
-      rel="icon"
-      href="assets/img/kaiadmin/favicon.ico"
-      type="image/x-icon"
-    />
+    <link rel="icon" href="{% static 'plantilla/kaiadmin/assets/img/favicon.ico' %}" type="image/x-icon">
+
 
     <!-- Fonts and icons -->
     <script src="{% static 'plantilla/kaiadmin/assets/js/plugin/webfont/webfont.min.js' %}"></script>
@@ -196,12 +210,8 @@
             <!-- Logo Header -->
             <div class="logo-header" data-background-color="dark">
               <a href="index.html" class="logo">
-                <img
-                  src="assets/img/kaiadmin/logo_light.svg"
-                  alt="navbar brand"
-                  class="navbar-brand"
-                  height="20"
-                />
+                <img src="{% static 'plantilla/kaiadmin/assets/img/kaiadmin/logo_light.svg' %}" alt="Logo" height="40">
+
               </a>
               <div class="nav-toggle">
                 <button class="btn btn-toggle toggle-sidebar">
@@ -256,7 +266,6 @@
                 <li class="nav-item topbar-user dropdown hidden-caret">
                   <a
                     class="dropdown-toggle profile-pic"
-                    data-bs-toggle="dropdown"
                     href="#"
                     aria-expanded="false"
                   >
@@ -267,23 +276,10 @@
                     </div>
                     <span class="profile-username">
                       <span class="op-7">BIENVENIDO,</span>
-                      <span class="fw-bold">ISMAEL</span>
+                      <span class="fw-bold">USUARIO</span>
                     </span>
                   </a>
-                  <ul class="dropdown-menu dropdown-user animated fadeIn">
-                    <div class="dropdown-user-scroll scrollbar-outer">
-                      <li>
-                        <div class="user-box">
-                          <div class="avatar-lg">
-                            <img src="{% static 'plantilla/kaiadmin/assets/img/profile.jpg' %}" alt="Profile">
 
-                          </div>
-                          
-                        </div>
-                      </li>
-                     
-                    </div>
-                  </ul>
                 </li>
               </ul>
             </div>
@@ -328,10 +324,7 @@
       
 
   </div>
-  <!--   Core JS Files   -->
-  <script src="{% static 'plantilla/kaiadmin/assets/js/core/jquery-3.7.1.min.js' %}"></script>
-  <script src="{% static 'plantilla/kaiadmin/assets/js/core/popper.min.js' %}"></script>
-  <script src="{% static 'plantilla/kaiadmin/assets/js/core/bootstrap.min.js' %}"></script>
+ 
 
   <!-- jQuery Scrollbar -->
   <script src="{% static 'plantilla/kaiadmin/assets/js/plugin/jquery-scrollbar/jquery.scrollbar.min.js' %}"></script>
@@ -351,18 +344,12 @@
   <script src="{% static 'plantilla/kaiadmin/assets/js/plugin/bootstrap-notify/bootstrap-notify.min.js' %}"></script>
 
 
-  <!-- jQuery Vector Maps -->
-<script src="{% static 'plantilla/kaiadmin/assets/js/plugin/jsvectormap/jsvectormap.min.js' %}"></script>
-<script src="{% static 'plantilla/kaiadmin/assets/js/plugin/jsvectormap/world.js' %}"></script>
-
-
 
   <!-- Kaiadmin JS -->
   <script src="{% static 'plantilla/kaiadmin/assets/js/kaiadmin.min.js' %}"></script>
 
-  <!-- Kaiadmin DEMO methods, don't include it in your project! -->
   <script src="{% static 'plantilla/kaiadmin/assets/js/setting-demo.js' %}"></script>
-  <script src="{% static 'plantilla/kaiadmin/assets/js/demo.js' %}"></script>
+  
   <script>
     $("#lineChart").sparkline([102, 109, 120, 99, 110, 105, 115], {
       type: "line",
