--- a/proyecto_adopciones/Aplicaciones/adopciones/templates/persona.html
+++ b/proyecto_adopciones/Aplicaciones/adopciones/templates/persona.html
@@ -82,7 +82,7 @@ $(document).ready(function() {
             },
             {
                 extend: 'colvis',
-                text: '<i class="fa fa-eye"></i> Columnas',
+                text: '<i class="fa fa-eye"></i> Filtro',
                 className: 'btn btn-warning'
             }
         ],
