--- a/proyecto_adopciones/Aplicaciones/adopciones/templates/plantilla.html
+++ b/proyecto_adopciones/Aplicaciones/adopciones/templates/plantilla.html
@@ -147,7 +147,7 @@
                 <div class="collapse" id="base">
                   <ul class="nav nav-collapse">
                     <li>
-                      <a href="/">
+                      <a href="{% url 'mascota' %}">
                         <span class="sub-item">MASCOTAS</span>
                       </a>
                     </li>
