--- a/proyecto_adopciones/Aplicaciones/adopciones/templates/adopciones/createAdopciones.html
+++ b/proyecto_adopciones/Aplicaciones/adopciones/templates/adopciones/createAdopciones.html
@@ -7,7 +7,7 @@
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h2 class="m-0"><i class="fas fa-book-medical me-2"></i> Crear Nuevo Curso</h2>
         <a href="/listar-adopciones" class="btn btn-secondary">
-            <i class="fas fa-arrow-left me-1"></i> Volver a la lista
+            <i class="fas fa-arrow-left me-1"></i> Volver a la lista de adopciones
         </a>
     </div>
 
